# initiative

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .semgrepignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUILD_REFACTOR_PLAN.md  README.md  SECURITY.md  TODO.md  docker-compose.example.yml  docker-compose.minio.yml  zensical.toml
backend/: .env.example  Dockerfile  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements-infra.txt  requirements.txt  setup_test_db.sh  start.sh
backend/alembic/: env.py  migrations_test.py  script.py.mako
backend/alembic/baseline/: guild_template_0125.sql  public_schema_0125.sql
backend/alembic/guild/: guild_rls.sql  guild_schema.sql
backend/alembic/versions/: 20240705_0001_initial_schema.py  20240709_0002_project_order.py  20240710_0003_admin_api_keys.py  20240716_0004_project_activity.py  20240716_0005_user_ui_prefs.py  20240716_0006_rename_teams_to_initiatives.py  20240717_0007_initiative_colors.py  20240717_0008_role_labels.py  20240717_0009_task_recurrence.py  20240717_0010_task_recurrence_occurrence_count.py  20240717_0011_task_start_date.py  20240718_0012_task_recurrence_strategy.py  20240718_0013_backfill_recurrence_strategy.py  20240720_0012_email_notifications.py  20240721_0013_in_app_notifications.py  20240801_0014_initiative_roles.py  20240802_0015_project_member_write.py  20240803_0001_guild_architecture.py  20240804_0002_drop_legacy_team_name_constraint.py  20240805_0003_global_app_settings.py  20240806_0004_documents.py  20240806_0005_document_featured_image.py  20240806_0006_document_templates.py  20240806_0007_document_permissions.py  20240807_0008_document_content_jsonb.py  20240808_0009_comments.py  20240809_0010_comment_and_task_indexes.py  20240810_0011_task_statuses.py  20240811_0012_user_week_start.py  20240812_0013_project_pinned_projects.py  20240813_0014_guild_membership_position.py  20240813_0015_merge_heads.py  20240821_0016_task_subtasks.py  20251215_0017_drop_ui_prefs.py  20251219_2041_rename_admin_api_keys_to_user_api_keys.py  20260113_0018_add_notify_mentions_to_users.py  20260115_0019_add_device_auth_tokens.py  20260116_0020_add_push_notifications.py  20260120_0021_add_ai_settings.py  20260121_0022_increase_ai_string_limits.py  (+111 more)
backend/app/: main.py  main_test.py  mcp_server.py  mcp_server_test.py
backend/app/api/: deps.py  guild_support_role_test.py  guild_suspension_test.py  resource_access.py  uploads_test.py
backend/app/core/: auth_context.py  body_limit.py  capabilities.py  capabilities_test.py  config.py  config_test.py  email_i18n.py  email_i18n_test.py  encryption.py  encryption_test.py  messages.py  pam_context.py  password_policy.py  password_policy_test.py  rate_limit.py  rate_limit_test.py  role_context.py  security.py  security_test.py  tools.py  tools_test.py  user_input_validators.py  user_input_validators_test.py  version.py
backend/app/db/: auth_identity_rls_test.py  auth_provider_secrets_rls_test.py  auth_sessions_rls_test.py  backfill_uploads_to_s3.py  backfill_uploads_to_s3_test.py  base.py  billing_constraints_test.py  billing_role_test.py  errors.py  guild_conversion.py  guild_conversion_test.py  guild_ddl.py  guild_migrations.py  guild_migrations_test.py  guild_rls_test.py  identifier_injection_test.py  init_db.py  init_db_test.py  initiative_rls.py  jti_blocklist.py  jti_blocklist_test.py  local_upload_migration.py  local_upload_migration_test.py  migration_filters.py  model_drift_test.py  platform_role_rls_test.py  platform_roles_test.py  query.py  query_injection_test.py  query_test.py  schema_provisioning.py  schema_provisioning_test.py  secret_key_rotation.py  secret_key_rotation_test.py  security_invariants_test.py  session.py  session_context_test.py  session_routing_test.py  soft_delete_filter.py  soft_delete_filter_test.py  (+5 more)
backend/app/models/: README.md  api_key.py  app_setting.py  automation.py  calendar_event.py  comment.py  counter.py  document.py  guild.py  guild_setting.py  initiative.py  layout_test.py  notification.py  oidc_claim_mapping.py  project.py  project_activity.py  project_order.py  property.py  push_token.py  queue.py  resource_grant.py  resource_grant_test.py  tag.py  task.py  task_assignment_digest.py  team.py  user.py  user_token.py  user_view_preference.py
backend/app/schemas/: README.md  access_grant.py  admin.py  ai_generation.py  ai_settings.py  api_key.py  attachment.py  auth.py  automation.py  automations.py  base.py  base_test.py  calendar_event.py  comment.py  counter.py  document.py  guild.py  ical.py  import_data.py  initiative.py  notification.py  project.py  project_export.py  property.py  push.py  query.py  queue.py  resource_grant.py  settings.py  stats.py  subtask.py  tag.py  task.py  task_sanitization_test.py  task_status.py  team.py  token.py  trash.py  user.py  user_test.py  (+2 more)
backend/app/services/: README.md  access_grants.py  access_grants_rls_test.py  ai_generation.py  ai_generation_test.py  ai_settings.py  ai_settings_test.py  api_keys.py  app_settings.py  attachments.py  attachments_test.py  background_tasks.py  calendar_events.py  captcha.py  captcha_test.py  collaboration.py  comments.py  comments_test.py  counter_realtime.py  counters.py  cross_guild.py  cross_guild_test.py  csv_export.py  csv_export_test.py  documents.py  documents_spreadsheet.py  email.py  email_test.py  event_publisher.py  event_publisher_test.py  guilds.py  guilds_test.py  hibp.py  hibp_test.py  ical_service.py  import_service.py  initiative_rls_test.py  initiatives.py  membership.py  membership_test.py  (+52 more)
backend/app/testing/: __init__.py  actor.py  factories.py  infrastructure_test.py  oidc.py  schema_harness.py
backend/scripts/: create-provisioner.sql  diagnose_s3_get.py  export_openapi.py  export_openapi_test.py  gen_guild_migration.py  gen_guild_rls.py  gen_guild_schema.py
backend/tests/: __init__.py  conftest.py  factories.py  test_infrastructure.py
(+1488 files in other folders)
