[tool.poetry]
name = "initiative-backend"
version = "0.1.0"
description = "FastAPI backend for Initiative project management app"
authors = ["Jordan <jordan@morels.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = { extras = ["standard"], version = "^0.42.0" }
sqlmodel = "^0.0.37"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.0"
PyJWT = "^2.11.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "==4.0.1"
pydantic-settings = "^2.3.4"
python-multipart = "^0.0.22"
email-validator = "^2.1.1"
httpx = "^0.28.1"
alembic = "^1.14.0"
icalendar = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
httpx = "^0.28.1"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
