[project]
name = "initiative-backend"
version = "0.1.0"
description = "FastAPI backend for Initiative project management app"
authors = [{ name = "Jordan", email = "jordan@morels.me" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1,<0.137",
    "uvicorn[standard]>=0.41.0,<0.45",
    "sqlmodel>=0.0.38,<0.0.39",
    "sqlalchemy>=2.0.49,<3",
    "asyncpg>=0.31.0,<0.32",
    "PyJWT>=2.12.1,<3",
    "argon2-cffi>=25.1.0,<26",
    "bcrypt==5.0.0",
    "pydantic-settings>=2.14.1,<3",
    "python-multipart>=0.0.27,<0.0.30",
    "email-validator>=2.3.0,<3",
    "httpx>=0.28.1,<0.29",
    "google-auth>=2.53.0",
    "requests>=2.34.2",                  # required by google-auth for requests transport
    "alembic>=1.18.4,<2",
    "slowapi>=0.1.9,<0.2",
    "tzdata>=2026.2",                    # required on Windows for timezone support
    "python-magic>=0.4.27",             # MIME type detection for file uploads
    "icalendar>=6.0.0",                  # iCal import/export
    "nh3>=0.3.5,<0.4",                   # HTML sanitization for schema inputs
    # Collaboration (Yjs CRDT): pycrdt-websocket 0.16.1 requires pycrdt>=0.13,<0.14; keep aligned.
    "pycrdt>=0.13.0,<0.14",
    "pycrdt-websocket>=0.16.1,<0.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.4.7,<0.16",
    "ty>=0.0.48,<0.1",
]

[tool.uv]
# Application, not a distributable package — sync dependencies only, never build/install the project itself.
package = false
