[project]
name = "initiative-backend"
version = "0.1.0"
description = "FastAPI backend for Initiative project management app"
authors = [{ name = "Jordan", email = "jordan@morels.me" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1,<0.140",
    "uvicorn[standard]>=0.41.0,<0.52",
    "sqlmodel>=0.0.38,<0.0.40",
    "sqlalchemy>=2.0.49,<3",
    "greenlet>=3.0",                     # SQLAlchemy async; its own marker skips macOS arm64, so require explicitly
    "asyncpg>=0.31.0,<0.32",
    # >=2.13.0: fixes the 2026 PyJWKClient cluster (CVE-2026-48522 JWKS-URI SSRF,
    # 48523 alg-allowlist bypass with a PyJWK key, 48524 unbounded JWKS fetch).
    # We verify OIDC id_tokens with jwt.decode + PyJWKClient, so this is a security
    # floor, not a preference — an older install is exploitable.
    "PyJWT>=2.13.0,<3",
    "argon2-cffi>=25.1.0,<26",
    "bcrypt==5.0.0",
    "pydantic-settings>=2.14.2,<3",
    "python-multipart>=0.0.31,<0.0.33",
    "email-validator>=2.3.0,<3",
    "httpx>=0.28.1,<0.29",
    "google-auth>=2.53.0",
    "requests>=2.34.2",                  # required by google-auth for requests transport
    "alembic>=1.18.4,<2",
    "slowapi>=0.1.9,<0.2",
    "tzdata>=2026.2",                    # required on Windows for timezone support
    "python-magic>=0.4.27",             # MIME type detection for file uploads
    "icalendar>=6.0.0",                  # iCal import/export
    "nh3>=0.3.5,<0.4",                   # HTML sanitization for schema inputs
    # Collaboration (Yjs CRDT): pycrdt-websocket 0.16.1 requires pycrdt>=0.13,<0.14; keep aligned.
    "pycrdt>=0.13.0,<0.15",
    "pycrdt-websocket>=0.16.1,<0.17",
    "premailer>=3.10.0",
    "fastmcp>=3.4.2",
    "boto3>=1.35,<2",                    # S3 / S3-compatible (MinIO) object storage; only imported when STORAGE_BACKEND=s3
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pytest-xdist>=3.6",
    "ruff>=0.4.7,<0.16",
    "ty>=0.0.48,<0.1",
]

[tool.uv]
# Application, not a distributable package — sync dependencies only, never build/install the project itself.
package = false

[tool.ty.rules]
# Full default rule set is enforced (CI runs a bare `uv run ty check app`).
# Only the rules below are off, because SQLModel models don't use Mapped[]
# column annotations: class-level attribute access types as the plain Python
# value (int, datetime, ...), so every ORM expression — Model.field == x,
# .in_()/.is_()/.desc(), selectinload(Model.rel), session.exec(...) — is a
# structural false positive ty cannot see through (confirmed unchanged on the
# latest ty release).
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
# Same root cause through operators: `Model.col < value` in a .where()/case()
# types as a plain-value comparison (e.g. `datetime | None < datetime`), and
# arithmetic on a persisted row's primary key hits the `int | None` id typing.
unsupported-operator = "ignore"

[[tool.ty.overrides]]
# SQLModel declares `model_config: SQLModelConfig`, so the standard pydantic
# `model_config = ConfigDict(...)` idiom used across the models is flagged as
# an invalid assignment. Model-directory-only carve-out; the rule stays on
# everywhere else.
include = ["app/models/**"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
